# EMS

./: .dockerignore  .env.example  .gitignore  CALIBER_LEARNINGS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  repository.yaml
.claude/: settings.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.2-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md
backend/: anomaly_detector.py  api.py  auth.py  commissioning.py  config.py  consumption_forecaster.py  controller_model.py  coordinator.py  coordinator_ha_commands.py  cross_charge.py  dess_models.py  dess_mqtt.py  evcc_models.py  evcc_mqtt_driver.py  export_advisor.py  feature_pipeline.py  ha_mqtt_client.py  ha_rest_client.py  health_logger.py  huawei_controller.py  huawei_mode_manager.py  influx_reader.py  influx_writer.py  ingress.py  interventions.py  live_tariff.py  main.py  model_store.py  notifier.py  orchestrator.py  schedule_models.py  scheduler.py  self_tuner.py  setup_api.py  setup_config.py  supervisor.py  supervisor_client.py  supervisor_model.py  tariff.py  tariff_models.py  (+5 more)
ems/: .dockerignore  CHANGELOG.md  Dockerfile  build.yaml  config.yaml  run.sh
ems.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ha-addon/: DOCS.md  Dockerfile  config.yaml  run.sh
scripts/: deploy_ha_addon.sh  ha_forecast_smoke.py  probe_emma.py  probe_evcc_mqtt.py  probe_huawei.py  probe_victron.py  uat_docker.sh
(+354 files in other folders)
