[project]
name = "ems"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "huawei-solar>=2.5",
    "pymodbus>=3.11,<4",
    "fastapi",
    "uvicorn[standard]",
    "paho-mqtt>=2.1",
    "influxdb-client[async]>=1.45",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "anyio[trio]",
    "pytest-anyio",
    "pytest-mock",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
anyio_mode = "auto"

[tool.setuptools.packages.find]
include = ["backend*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
